# hacknation-2025-cycling-ai-coach

./: .cursorignore  .flutter-plugins-dependencies  .gitignore  README.md  cycling_last_90_days-20250809_202305.csv  pubspec.yaml
.cursor/rules/: flutter-dart.mdc  project-structure.mdc  python-backend.mdc  supabase-sql.mdc
android/app/: build.gradle.kts
database_functions/: README.md  create_schedule_interval.sql  delete_schedule_interval_by_id.sql  insert_cycling_activity.sql  test.sql
database_functions/create_tables/: create_table_cycling_activities.sql  create_table_schedule_intervals.sql  create_table_user_memories.sql
database_functions/cycling_activity/: load_cycling_activities.sql
database_functions/schedule_interval/: create_schedule_interval.sql  list_schedule_intervals.sql  update_schedule_interval_by_id.sql
database_functions/user_memory/: create_user_memory.sql  delete_user_memory.sql  list_user_memories.sql
ios/: Podfile
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: README.md  main.dart
lib/dto/: cycling_activity_dto.dart  schedule_interval_dto.dart  test_dto.dart
python_backend/: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
python_backend/src/: app.py  register_elevenlabs_tools_requests.py
python_backend/src/api/routers/: health.py  mcp_server.py  memory.py  schedule.py  stats.py  tools.py  weather.py
python_backend/src/models/: cycling_activity.py  schedule_interval.py
python_backend/src/services/: supabase_service.py
python_backend/src/utils/: ingest_utils.py
(+37 files in other folders)
